# playgo

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
cmd/: BUILD.bazel  playgo.go
playgrpc/proto/: BUILD.bazel  api.proto
playgrpc/server/: BUILD.bazel  server.go
