load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["playgo.go"],
    importpath = "github.com/kopwei/playgo/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//playgrpc/server",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
