load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/kopwei/playgo/playgrpc/server",
    visibility = ["//visibility:public"],
    deps = [
        "//playgrpc/proto",
        "@io_k8s_klog_v2//:klog",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
